# atmega-cmake-avrgcc

./: CMakeLists.txt  LICENCE  README.md  VSCODESETUP.md  VSCodeSetup.md  setup_cmake.sh
.github/workflows/: avr-ci.yml
cmake/: avr-gcc-toolchain.cmake
docker/: Dockerfile  entrypoint.sh
docs/: VSCodeSetup.md
include/: mylib.h
src/: main.c
src/mylib/: mylib.c
test/catch2/: CMakeLists.txt  test_mylib.cpp
test/catch2/src/catch2/: catch_user_config.hpp
test/cpputest/: CMakeLists.txt  test_mylib.cpp
test/googletest/: CMakeLists.txt  test_mylib.cpp
test/unity/: CMakeLists.txt  test_mylib.c
